# Capstone

./: .gitignore  README.md  ingest_geo.py  pyproject.toml
capstone/: create_tables.py  pyproject.toml
capstone/data_ingestion/: READEME.md  db_connection.py  education_data.py  ingest_education_data.py  ingest_mbta_data.py  ingest_mbta_geoms.py  ingest_population_data.py  ingest_town_data.py  ingest_town_geoms.py  ingest_traffic_data.py  ingest_traffic_locations.py
capstone/database_set_up/: create_tables.py  table_definitions.py
capstone/database_set_up/table_creation_scripts/: create_education_tables.py  create_mbta_tables.py  create_modeling_table.py  create_population_tables.py  create_shapefile_tables.py  create_town_tables.py  create_traffic_tables.py
capstone/database_set_up/table_definitions/: education_tables.py  mbta_data.py  modeling.py  population_data.py  shapefile_tables.py  town_data.py  traffic_tables.py
capstone/modeling/: initial.py  mbta_class_2_1_models.py  mbta_class_4_3_models.py  mbta_class_6_5_models.py  mbta_class_7_models.py  regression.py  regression_combined_model.py  regression_landuse.py  regression_mbta.py  regression_mbta_use.py  regression_mbta_use_predict.py  rf.py  rf_validate.py  shared_functions.py  use_types.py  xg_class_seven.py  xg_class_seven_train.py
capstone/modeling/past_models/: trips.py  xg_boost.py
capstone/src/capstone/: create_tables.py  ingest_town_geoms.py  table.py
capstone/streamlit_scripts/: Home.py  README.md  streamlit_combine.py  streamlit_compliance_map.py  streamlit_mbta_lines.py  streamlit_merge.py  streamlit_predict.py  streamlit_predict_updated.py  streamlit_traffic.py
capstone/streamlit_scripts/pages/: Town_Layout.py  Traffic_Predictions.py
capstone/traffic_data/: web.py  web_scraping_traffic_count.py  wrangle_fifteen_min.py
capstone/web_scraping_traffic_data/: go_api.py  web_scraping_step_1.py  web_scraping_step_2.py  web_scraping_step_3.py  web_scraping_traffic_count_best.py  wrangle_traffic_fifteen_min.py
