[project]
name = "capstone"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry]
packages = [{include = "capstone"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
